<resources>
    <string name="app_name" translatable="false">Shoot The Apple</string>
    <string name="ranking">Rangliste</string>
    <string name="start">Start!</string>
    <string name="shoottheapple" translatable="false">Shoot the Apple</string>
    <string name="points">Punkte</string>
    <string name="life">Leben</string>
    <string name="backButton">Zurück</string>
    <string name="newHighscore">Du hast einen neuen Highscore erreicht.\nTrage deinen Namen ein.</string>
    <string name="save">speichern</string>

    <string-array name="themeSelection">
            <item>Theme</item>
            <item>OST Theme</item>
            <item>HSR Theme</item>
            <item>Dark Theme</item>
    </string-array>

    <string-array name="languageSelection">
        <item>Sprache</item>
        <item>Deutsch</item>
        <item>English</item>
        <item>Srpski</item>
        <item>Rätoromanisch</item>
    </string-array>

</resources>