<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkgrey"
    android:paddingBottom="5dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:text="@string/shoottheapple"
        android:textColor="@color/colorPrimary"
        android:textSize="60sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <Button
        android:id="@id/start_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_toStartOf="@id/welcome"
        android:text="@string/start"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@+id/welcome"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@id/ranking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/ranking"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@+id/start_button"
         />

</androidx.constraintlayout.widget.ConstraintLayout>